--- a/docs/libvirt.css
+++ b/docs/libvirt.css
@@ -30,6 +30,7 @@ h2, h3, h4, h5, h6 {
 
 #content {
     margin-left: 230px;
+    margin-right: 1em;
     padding: 0px;
     padding-bottom: 1em;
 }
